fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 
 html, body {
   background-color: #333;
-  overflow: hidden;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
   font-family: 'Open Sans', sans-serif;
